--- a/style.css
+++ b/style.css
@@ -1,66 +1,84 @@
-*,
-*::before,
-*::after {
-    box-sizing: border-box;
-    --background-color: hsl(224, 19%, 15%);
-    font-family: Geneva, sans-serif;
-}
-
-body {
-    width: 100vw;
-    
-}
-
 header {
-    width: 100%;
-    margin: 0 0 15px 0;
-    background-color: var(--background-color);
-    height: 80px;
-}
-
-nav> ul {
+    background-color: #444;
+    height: 90px;
     display: flex;
-    flex-direction: row;
-    justify-content: center;
-    list-style: none;
-}
-
-li {
-    text-align: center;
-    height: 70px;
-    line-height: 70px;
-    width: 200px;
-    margin:auto 5px;
-}
-
-main {
-    display: grid;
-    grid-template-rows: 37%, 31.5%, 31.5%;
-}
-
-main> div {
-    margin: 15px auto;
-}
-
-div:nth-child(2) {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-}
-
-div:nth-child(2) > section {
-    margin: 0 15px;
-}
-
-div:nth-child(3) {
-    display: flex;
-    flex-direction: row;
-}
-
-div:nth-child(3) > * {
-    margin: 0 15px;
-}
-
-
-
-
+    padding: 10px
+  }
+  
+  nav {
+    margin: 0 auto;
+    width: 960px;
+  }
+  
+  nav img {
+    margin-top: 10px;
+    float: left;
+    margin-right: 30px; 
+  }
+  
+  nav ul {
+    float: left;
+  }
+  
+  a {
+    text-decoration: none;
+    color: gray;
+  }
+  
+  nav li {
+    float: left;
+    line-height: 90px;
+    margin-right: 90px;
+  }
+  
+  main {
+    width: 960px;
+    margin: 0 auto;
+  }
+  main > img:first-child {
+    margin-top: 30px;
+  }
+  
+  main > ul:nth-child(2) {
+    margin-top: 30px;
+    overflow: hidden;
+  }
+  
+  main > ul:nth-child(2) > li {
+    margin-right: 30px;
+    float: left;
+  }
+  
+  main > ul:nth-child(2) > li:last-child {
+    margin-right: 0;
+  }
+  
+  main > article {
+    margin-top: 30px;
+    overflow: hidden;
+  }
+  
+  main > article > * {
+    float: left;
+    width: 50%;
+  }
+  
+  main > article > img {
+    box-sizing: border-box;
+    padding-right: 30px;
+  }
+  
+  main > article > section > h1 {
+    font-weight: bold;
+    padding-bottom: 10px;
+  }
+  
+  main > article > section > p {
+    height: 300px; 
+    overflow: auto;
+    font-style: italic;
+    font-size: large;
+    margin-bottom: 10px;
+  }
+  
+  
